syntax = "proto3";

package admin;

option go_package = "./v1;v1";

import "validate/validate.proto";

message ResourceClassify{
  uint32 id = 1;
  string name = 2;
  optional uint32 weight = 3;
  uint32 created_at = 4;
  uint32 updated_at = 5;
}

message AllResourceClassifyReply{
  repeated ResourceClassify list = 1;
}

message AddResourceClassifyRequest {
  string name = 1[(validate.rules).string = {min_len: 1}];
  uint32 weight = 2[(validate.rules).uint32 = {gte: 0}];
}

message UpdateResourceClassifyRequest {
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
  string name = 2[(validate.rules).string = {min_len: 1}];
  uint32 weight = 3[(validate.rules).uint32 = {gte: 0}];
}

message DeleteResourceClassifyRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt: 0}];
}


